force-app/main/default/objects/Opportunity/fields/Review_Due__c.field-meta.xml
<CustomField>
    <fullName>Review_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Due</label>
    <type>Date</type>
</CustomField>