force-app/main/default/objects/Opportunity/fields/Risk_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Risk_Review_Comments__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Risk Review Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>