force-app/main/default/objects/Opportunity/fields/Risk_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Review_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Review Date</label>
    <type>Date</type>
</CustomField>