force-app/main/default/objects/Opportunity/fields/Stage_ClosedWon__c.field-meta.xml
<CustomField>
    <fullName>Stage_ClosedWon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Opportunity is Closed Won &quot;Stage ClosedWon &quot;  Update through Opportunity Before Update.</description>
    <label>Stage ClosedWon</label>
    <type>Checkbox</type>
</CustomField>