force-app/main/default/objects/Opportunity/fields/Sum_of_JournalLines__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_JournalLines__c</fullName>
    <label>Sum_of_Journals</label>
    <summarizedField>JournalLineItem__c.Journal_Amount__c</summarizedField>
    <summaryForeignKey>JournalLineItem__c.Journal_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>