force-app/main/default/objects/Opportunity/fields/Sum_of_Journals__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Journals__c</fullName>
    <label>Sum_of_Journals</label>
    <summarizedField>JournalLineItem__c.Journal_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>JournalLineItem__c.Journal_ProductFamily__c</field>
        <operation>notEqual</operation>
        <value>Business Loan</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>JournalLineItem__c.Journal_ProductFamily__c</field>
        <operation>notEqual</operation>
        <value>Vanilla FX</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>JournalLineItem__c.Journal_ProductFamily__c</field>
        <operation>notEqual</operation>
        <value>CRM</value>
    </summaryFilterItems>
    <summaryForeignKey>JournalLineItem__c.Journal_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>