force-app/main/default/objects/Opportunity/fields/TRID_Reference__c.field-meta.xml
<CustomField>
    <fullName>TRID_Reference__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>TRID Reference &amp; Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>