force-app/main/default/objects/Opportunity/recordTypes/Business_Loan.recordType-meta.xml
<RecordType>
    <fullName>Business_Loan</fullName>
    <active>true</active>
    <businessProcess>Opp Sales Process</businessProcess>
    <label>Business Loan</label>
</RecordType>