force-app/main/default/objects/Opportunity/recordTypes/Commodities_Deal_UK_Treasury_Solutions.recordType-meta.xml
<RecordType>
    <fullName>Commodities_Deal_UK_Treasury_Solutions</fullName>
    <active>true</active>
    <businessProcess>Opp Sales Process</businessProcess>
    <label>Commodity</label>
</RecordType>