force-app/main/default/objects/Opportunity/recordTypes/FX_Cash.recordType-meta.xml
<RecordType>
    <fullName>FX_Cash</fullName>
    <active>true</active>
    <businessProcess>Opp Sales Process</businessProcess>
    <description>Record type to store the FX Cash Opp (Trades coming from Calypso)</description>
    <label>FX Cash</label>
</RecordType>