force-app/main/default/objects/Opportunity/recordTypes/FX_Deal_UK_Treasury_Solutions.recordType-meta.xml
<RecordType>
    <fullName>FX_Deal_UK_Treasury_Solutions</fullName>
    <active>true</active>
    <businessProcess>Opp Sales Process</businessProcess>
    <label>CRM</label>
</RecordType>