force-app/main/default/objects/Opportunity/recordTypes/IRRM_Deal_UK_Treasury_Solutions.recordType-meta.xml
<RecordType>
    <fullName>IRRM_Deal_UK_Treasury_Solutions</fullName>
    <active>true</active>
    <businessProcess>Opp Sales Process</businessProcess>
    <label>IRRM</label>
</RecordType>