force-app/main/default/objects/Opportunity/recordTypes/Vanilla_FX_Deal_UK_Treasury_Solutions.recordType-meta.xml
<RecordType>
    <fullName>Vanilla_FX_Deal_UK_Treasury_Solutions</fullName>
    <active>true</active>
    <businessProcess>Opp Sales Process</businessProcess>
    <label>Vanilla FX</label>
</RecordType>