force-app/main/default/objects/Opportunity/validationRules/Opp_Amount_Cannot_Be_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Amount_Cannot_Be_Null</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Amount)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Opportunity Amount cannot be Null</errorMessage>
</ValidationRule>