force-app/main/default/objects/Opportunity/validationRules/OPP_Appropriateness_Asses_For_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Appropriateness_Asses_For_Closed_Won</fullName>
    <active>true</active>
    <description>Appropriateness Assessment Undertaken is mandatory for all closed won deals</description>
    <errorConditionFormula>Appropriateness_Assessment_Undertaken__c=False &amp;&amp;  ISPICKVAL( StageName, &quot;Closed Won&quot;) &amp;&amp;  NOT(RecordType.DeveloperName = &quot;Vanilla_FX_Deal_UK_Treasury_Solutions&quot;  || RecordType.DeveloperName = &quot;FX_Cash&quot;)</errorConditionFormula>
    <errorDisplayField>Appropriateness_Assessment_Undertaken__c</errorDisplayField>
    <errorMessage>Appropriateness Assessment Undertaken is mandatory when Stage is Closed Won</errorMessage>
</ValidationRule>