force-app/main/default/objects/Opportunity/validationRules/Opp_Banker_Team_on_Customer_is_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Banker_Team_on_Customer_is_Blank</fullName>
    <active>true</active>
    <description>RM Name must be linked to Team before closing an opp.</description>
    <errorConditionFormula>IF(Opp_RunValidation__c == true, ((ISNEW()  ||  ISCHANGED( StageName ) )  &amp;&amp;  ISPICKVAL(StageName, &quot;Closed Won&quot;) &amp;&amp;  ISBLANK( Account.RM_Name__r.Con_Team__c )), false)</errorConditionFormula>
    <errorMessage>Opportunity cannot be closed as the Related Customer&#39;s RM Name is not linked to a Business Centre.</errorMessage>
</ValidationRule>