force-app/main/default/objects/Opportunity/validationRules/OPP_Cannot_be_closed_if_Us_Person_is_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Cannot_be_closed_if_Us_Person_is_Yes</fullName>
    <active>true</active>
    <description>Opportunity cannot be closed if the related Account&#39;s US Person is set to &quot;Yes&quot;</description>
    <errorConditionFormula>ISCHANGED(StageName)  &amp;&amp; ISPICKVAL(StageName , &quot;Closed Won&quot;)    &amp;&amp;  ISPICKVAL(Account.US_Persons__c, &quot;Yes&quot;)</errorConditionFormula>
    <errorMessage>Opportunity cannot be closed as the Related Customer&#39;s Us Person is set as &quot;Yes&quot;</errorMessage>
</ValidationRule>