force-app/main/default/objects/Opportunity/validationRules/OPP_Close_Date_Cannot_be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Close_Date_Cannot_be_Changed</fullName>
    <active>true</active>
    <description>Opportunity Close Date cannot be changed if the Status is Closed Won</description>
    <errorConditionFormula>AND(NOT(ISBLANK(CloseDate)),ISCHANGED(CloseDate),ISPICKVAL(StageName,&quot;Closed Won&quot;))</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Closed Date Cannot be Changed for Closed Won Opportunities .</errorMessage>
</ValidationRule>