force-app/main/default/objects/Opportunity/validationRules/Opp_Creation_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Creation_Restriction</fullName>
    <active>true</active>
    <description>None of the users should be able to create FX Cash opportunities - Not even super user</description>
    <errorConditionFormula>AND( 
ISNEW(), 
$Profile.Name&lt;&gt; &quot;System Administrator&quot;, 
RecordType.DeveloperName =&quot;FX Cash&quot;

)</errorConditionFormula>
    <errorMessage>FX Cash opportunities cannot be created. Do not have permission.</errorMessage>
</ValidationRule>