force-app/main/default/objects/Opportunity/validationRules/OPP_Date_of_Agreement_for_Commodity_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Date_of_Agreement_for_Commodity_Opp</fullName>
    <active>true</active>
    <description>To check the Date of Agreement on Related Customer for Commodity opp</description>
    <errorConditionFormula>NOT($Permission.CloseOpportunity) &amp;&amp; (RecordType.DeveloperName = &quot;Commodities_Deal_UK_Treasury_Solutions&quot; &amp;&amp; ISPICKVAL( StageName , &quot;Closed Won&quot;) &amp;&amp; ( ISBLANK( Account.ISDA_Date_of_Agreement__c ) ||  ISBLANK( Account.LEI_Obtained__c ) ))</errorConditionFormula>
    <errorMessage>ISDA Date of Agreement and LEI Obtained are required for Commodity Opportunity</errorMessage>
</ValidationRule>