force-app/main/default/objects/Opportunity/validationRules/OPP_Date_of_Agreement_for_IRRM_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Date_of_Agreement_for_IRRM_Opp</fullName>
    <active>true</active>
    <description>To check the Date of Agreement on Related Customer for IRRM opp</description>
    <errorConditionFormula>NOT($Permission.CloseOpportunity) &amp;&amp; (RecordType.DeveloperName = &quot;IRRM_Deal_UK_Treasury_Solutions&quot;) &amp;&amp; ISPICKVAL( StageName , &quot;Closed Won&quot;) &amp;&amp; ( ISBLANK( Account.ISDA_Date_of_Agreement__c ) &amp;&amp; ISBLANK( Account.LEI_Obtained__c ) )</errorConditionFormula>
    <errorMessage>ISDA Date of Agreement or LEI Obtained are required for IRRM Opportunity</errorMessage>
</ValidationRule>