force-app/main/default/objects/Opportunity/validationRules/OPP_Date_of_Agreement_for_Vanilla_FX_fwd.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Date_of_Agreement_for_Vanilla_FX_fwd</fullName>
    <active>true</active>
    <description>To check the Date of Agreement on Related Customer for Vanilla FX - Forward Product</description>
    <errorConditionFormula>NOT($Permission.CloseOpportunity) &amp;&amp; (RecordType.DeveloperName  = &quot;Vanilla_FX_Deal_UK_Treasury_Solutions&quot;  &amp;&amp; ISPICKVAL( StageName , &quot;Closed Won&quot;) &amp;&amp; ISPICKVAL( Product__c , &quot;Vanilla Forward&quot;)   &amp;&amp; (( ISBLANK( Account.FCTMA_Date_of_Agreement__c ) &amp;&amp; ISBLANK( Account.ISDA_Date_of_Agreement__c )) || ISBLANK( Account.LEI_Obtained__c )))</errorConditionFormula>
    <errorMessage>Either ISDA date of agreement or FCTMA date of agreement and LEI obtained are required For Vanilla FX - Forward Opportunity</errorMessage>
</ValidationRule>