force-app/main/default/objects/Opportunity/validationRules/OPP_Date_of_Agrement_for_Vanilla_FX_Spot.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Date_of_Agrement_for_Vanilla_FX_Spot</fullName>
    <active>true</active>
    <description>To check the Date of Agreement on Related Customer for Vanilla FX - Spot Product</description>
    <errorConditionFormula>NOT($Permission.CloseOpportunity) &amp;&amp; (RecordType.DeveloperName  = &quot;Vanilla_FX_Deal_UK_Treasury_Solutions&quot;  &amp;&amp; ISPICKVAL( StageName , &quot;Closed Won&quot;) &amp;&amp; ISPICKVAL( Product__c , &quot;Vanilla Spot&quot;)   &amp;&amp; (ISBLANK( Account.FCTMA_Date_of_Agreement__c ) &amp;&amp; ISBLANK( Account.ISDA_Date_of_Agreement__c )))</errorConditionFormula>
    <errorMessage>Either ISDA date of agreement or FCTMA date of agreement are required For Vanilla FX - Spot Opportunity</errorMessage>
</ValidationRule>