force-app/main/default/objects/Opportunity/validationRules/OPP_Deal_Executed_By_Req_For_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Deal_Executed_By_Req_For_Closed_Won</fullName>
    <active>true</active>
    <description>Deal Executed By required when the stage is Closed Won</description>
    <errorConditionFormula>ISPICKVAL( StageName , &quot;Closed Won&quot;)  &amp;&amp;  ISBLANK( Deal_Executed_By__c ) &amp;&amp; NOT(RecordType.DeveloperName = &quot;Vanilla_FX_Deal_UK_Treasury_Solutions&quot;)</errorConditionFormula>
    <errorDisplayField>Deal_Executed_By__c</errorDisplayField>
    <errorMessage>Deal Executed By is mandatory when stage is Closed Won</errorMessage>
</ValidationRule>