force-app/main/default/objects/Opportunity/validationRules/OPP_Deal_Executed_Tel_For_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Deal_Executed_Tel_For_Closed_Won</fullName>
    <active>true</active>
    <description>Deal Executed Tel Number &amp; Time is mandatory for all closed won deals</description>
    <errorConditionFormula>ISBLANK(Deal_Executed_Tel_Number__c) &amp;&amp;  ISPICKVAL( StageName, &quot;Closed Won&quot;) &amp;&amp;  NOT(RecordType.DeveloperName = &quot;Vanilla_FX_Deal_UK_Treasury_Solutions&quot;  || RecordType.DeveloperName = &quot;FX_Cash&quot;)</errorConditionFormula>
    <errorDisplayField>Deal_Executed_Tel_Number__c</errorDisplayField>
    <errorMessage>Deal Executed Tel Number &amp; Time is mandatory when Stage is Closed Won</errorMessage>
</ValidationRule>