force-app/main/default/objects/Opportunity/validationRules/OPP_Deal_Reference_for_Closed_Won_Deals.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Deal_Reference_for_Closed_Won_Deals</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(StageName,&quot;Closed Won&quot;)
&amp;&amp; 
ISBLANK(Deal_Reference__c) &amp;&amp; NOT(RecordType.DeveloperName = &quot;Vanilla_FX_Deal_UK_Treasury_Solutions&quot;)</errorConditionFormula>
    <errorMessage>Please enter a Deal Reference for all Closed Won deals</errorMessage>
</ValidationRule>