force-app/main/default/objects/Opportunity/validationRules/OPP_Details_for_Business_Loan_Trade.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Details_for_Business_Loan_Trade</fullName>
    <active>false</active>
    <description>Opportunity Details field should be locked down after is closed won for all users apart from Super User</description>
    <errorConditionFormula>AND( NOT( ISCHANGED(StageName)), ISPICKVAL( StageName,&quot;Closed Won&quot;), NOT( $Permission.UpdateOpportunityDetails), RecordType.DeveloperName =&#39;Business_Loan&#39;,OR(ISCHANGED(Name),ISCHANGED( AccountId), ISCHANGED(Product__c), ISCHANGED(Deal_Executed_By__c), ISCHANGED( Opp_TradeID__c), ISCHANGED( Maturity_Date__c), ISCHANGED( OwnerId), ISCHANGED( Pre_Deal_Checklist__c ), ISCHANGED( RecordTypeId), ISCHANGED( NextStep),ISCHANGED(CloseDate), ISCHANGED( Probability), ISCHANGED( Opportunity_Currency__c ),ISCHANGED(Other_Currencies__c), ISCHANGED(Face_Value_Amount__c), ISCHANGED(Amount), ISCHANGED( Lost_Reason__c )))</errorConditionFormula>
    <errorMessage>Only Super User Can update the opportunity details after it is closed won</errorMessage>
</ValidationRule>