force-app/main/default/objects/Opportunity/validationRules/OPP_Details_for_FX_Cash_Deal_PSD2.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Details_for_FX_Cash_Deal_PSD2</fullName>
    <active>true</active>
    <description>Opportunity Details field should be locked down after is closed won for all users apart from Super User</description>
    <errorConditionFormula>AND( NOT( ISCHANGED(StageName)), ISPICKVAL( StageName,&quot;Closed Won&quot;), NOT( $Permission.UpdateOpportunityDetails), RecordType.DeveloperName =&#39;FX_Cash&#39;,OR(ISCHANGED(Name),ISCHANGED( AccountId),ISCHANGED( Deal_Executed_By__c ), ISCHANGED(Product__c), ISCHANGED( Customer_Type__c ) , ISCHANGED( OwnerId), ISCHANGED( Pre_Deal_Checklist__c ),ISCHANGED( RecordTypeId), ISCHANGED( NextStep),ISCHANGED(CloseDate), ISCHANGED( Probability), ISCHANGED( Opportunity_Currency__c ),ISCHANGED(Other_Currencies__c), ISCHANGED(Amount), ISCHANGED( Lost_Reason__c ),ISCHANGED( Banker__c ), ISCHANGED( Opp_CorpCode__c ), 
ISCHANGED( Division__c ), ISCHANGED( Opp_GLAccountNumber__c ), ISCHANGED( Customer_Type__c ), ISCHANGED( Opp_TradeID__c )  ))</errorConditionFormula>
    <errorMessage>Only Super User Can update the opportunity details after it is closed won</errorMessage>
</ValidationRule>