force-app/main/default/objects/Opportunity/validationRules/OPP_Face_Value_Amount_req_for_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Face_Value_Amount_req_for_Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(RecordType.DeveloperName = &quot;Vanilla_FX_Deal_UK_Treasury_Solutions&quot;  || RecordType.DeveloperName = &quot;FX_Cash&quot;) &amp;&amp; ISNULL( Face_Value_Amount__c )  &amp;&amp;   ISPICKVAL(StageName , &quot;Closed Won&quot;)</errorConditionFormula>
    <errorDisplayField>Face_Value_Amount__c</errorDisplayField>
    <errorMessage>Face Value Amount cannot be Null for Closed Won Deals</errorMessage>
</ValidationRule>