force-app/main/default/objects/Opportunity/validationRules/OPP_Lost_Reason_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Lost_Reason_Req</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(StageName,&quot;Closed Lost&quot;)
&amp;&amp; 
ISBLANK(Lost_Reason__c)</errorConditionFormula>
    <errorDisplayField>Lost_Reason__c</errorDisplayField>
    <errorMessage>Please enter a reason for all lost deals</errorMessage>
</ValidationRule>