force-app/main/default/objects/Opportunity/validationRules/OPP_Maturity_Date_As_Non_Weekends.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Maturity_Date_As_Non_Weekends</fullName>
    <active>true</active>
    <description>Maturity Date should not be selected as Weekends</description>
    <errorConditionFormula>CASE(MOD(  Maturity_Date__c  - DATE(1900, 1, 7), 7),
0, 0,
6, 0,
1) = 0</errorConditionFormula>
    <errorDisplayField>Maturity_Date__c</errorDisplayField>
    <errorMessage>Maturity Date cannot be set to Weekend.</errorMessage>
</ValidationRule>