force-app/main/default/objects/Opportunity/validationRules/OPP_Maturity_Date_Req_For_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Maturity_Date_Req_For_Closed_Won</fullName>
    <active>true</active>
    <description>Maturity Date is required for all closed won deals</description>
    <errorConditionFormula>ISBLANK( Maturity_Date__c) &amp;&amp;  ISPICKVAL( StageName, &quot;Closed Won&quot;) &amp;&amp;  NOT(RecordType.DeveloperName = &quot;Vanilla_FX_Deal_UK_Treasury_Solutions&quot;  || RecordType.DeveloperName = &quot;FX_Cash&quot;)</errorConditionFormula>
    <errorDisplayField>Maturity_Date__c</errorDisplayField>
    <errorMessage>Maturity Date is mandatory when Stage is Closed Won</errorMessage>
</ValidationRule>