force-app/main/default/objects/Opportunity/validationRules/OPP_Next_Step_for_Work_in_progress_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Next_Step_for_Work_in_progress_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(StageName,&quot;Work In Progress&quot;)
&amp;&amp; 
ISBLANK(NextStep)</errorConditionFormula>
    <errorDisplayField>NextStep</errorDisplayField>
    <errorMessage>Please enter a Next Step for all deals that are Work In Progress</errorMessage>
</ValidationRule>