force-app/main/default/objects/Opportunity/validationRules/OPP_Post_Deal_Checklist_is_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Post_Deal_Checklist_is_Selected</fullName>
    <active>true</active>
    <description>To check if the selected Post Deal Checklist is already selected for another opportunity</description>
    <errorConditionFormula>IF( NOT (ISBLANK( Post_Deal_Checklist__c ))  &amp;&amp;  (NOT(ISBLANK(  Post_Deal_Checklist__r.Opportunity__c ))) &amp;&amp;   (Post_Deal_Checklist__r.Opportunity__c  &lt;&gt;   Id ), 
TRUE, 
FALSE)</errorConditionFormula>
    <errorDisplayField>Post_Deal_Checklist__c</errorDisplayField>
    <errorMessage>The selected Post Deal Checklist is already selected for another Opportunity</errorMessage>
</ValidationRule>